--- a/index.htm
+++ b/index.htm
@@ -8,59 +8,9 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
-            padding: 0;
-            background-color: #f5f5f5;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-        }
-
-        section {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1, h2 {
-            color: #333;
-        }
-
-        p {
-            line-height: 1.6;
-            color: #555;
-        }
-
-        a {
-            color: #0066cc;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>王建翔 - 自我介紹</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background: url('C:\\Users\\qqq\\OneDrive\\桌面\\IMG_4580.PNG') center/cover no-repeat; /* 請確保路徑正確，並且圖片有副檔名（例如 .jpg） */
+            background: url('https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/IMG_4580.PNG') center/cover no-repeat;
             background-attachment: fixed;
             color: #fff;
         }
@@ -81,12 +31,12 @@
         }
 
         h1, h2 {
-            color: #333;
+            color: #0e0101;
         }
 
         p {
             line-height: 1.6;
-            color: #555;
+            color: #0c0101;
         }
 
         a {
@@ -107,7 +57,7 @@
 
     <section>
         <h2>關於我</h2>
-        <p>我是海資二王建翔，興趣玩原神</p>
+        <p>我是王建翔，興趣騎腳踏車 看地獄梗</p>
     </section>
 </body>
 
