--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,11 @@
             text-align: center;
             padding: 10px;
         }
-
+        .grid-item img {
+        width: 400px;
+        height: 300px;
+        object-fit: cover;
+        }
         section {
             max-width: 800px;
             margin: 20px auto;
@@ -31,10 +35,10 @@
         }
 
         h1, h2 ,h4{
-            color: #010e04;
+            color: #ec0808;
         }
         h3{
-            color: #ec0808;
+            color:#0c0101;
         }
 
         p {
@@ -60,11 +64,47 @@
 
     <section>
         <h2>關於我</h2>
-        <p><h4>我是王建翔，興趣騎腳踏車、機車，看地獄梗，因為最近臨近聖誕節，使用聖誕氣氛的背景</h4></p>
-        <p><h3>希銘吃老鼠麵</h3></p>
+        <p><h3>我是王建翔，是一個唐唐正正的嘉義人，興趣騎腳踏車、機車，釣魚，看地獄梗，因為最近剛過完聖誕節，使用聖誕氣氛的背景</h3></p>
+        <p><h2>以下是最常看得地獄梗</h2></p>
+        <p><h3>王希銘是一位台灣網路知名人物，發跡於哈哈母特，以下是網友幫他做的梗圖，希銘吃老鼠麵</h3></p>
         <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/54568.jpg"; >
-        <p><h3>竹東舞王跳咖啡牛奶</h3></p>
+        <p><h3>天峰是一名先前在FB賣玩具、精品的直播主，因為被封台後面轉站TIKTOK，他的特色沒門牙講話都會烙風，牙起來很瘋，他的直播台約9成的觀眾都是在亂他，而咖啡牛奶的由來是天峰說一名酸民家像鬼屋，所以開了探險直播進去探險，沒想到酸民烙了一堆人包圍他，讓他開直播跳舞，其中咖啡牛奶是本事件的經典，天峰那恐懼的雙眼再搭配不甘願的舞步，簡直絕作，但此事件造成峰哥日後的陰影，揮之不去。</h3></p>
+        <p><h2>咖啡牛奶GIF</h2></p>
         <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main//cacheMessagep102405.gif"; >
+        <p><h3>天峰老婆恰吉茹茹，因為貌似電影裡的恰吉，所以有恰吉綽號，前陣子跟天峰的離婚危機鬧得比八點檔還要精彩，最後還是選擇天峰，兩人的愛恨情仇羈絆一生</h3></p>
+        <p><h2>恰吉</h2></p>
+        <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/恰吉.jpg"; >
+        <p><h3>本人興趣是騎車，回嘉義騎機車，路途看到美麗風景，會拍下來留念</h3></p>
+        <h2>風景照片</h2>
+        <div class="bottom-gallery">
+            <div class="grid-item">
+                <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/IMG_2796.JPG"; alt="照片19">
+            </div>
+            <div class="grid-item">
+                <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/IMG_3153.JPG"; alt="照片20">
+            <div class="grid-item">
+                <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/IMG_3404.JPG"; alt="照片19">
+            </div>
+            <div class="grid-item">
+                <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/IMG_4089.JPG"; alt="照片20">
+            </div>
+            <div class="grid-item">
+                <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/IMG_4624.JPG"; alt="照片19">
+            </div>
+            <div class="grid-item">
+                <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/IMG_4608.JPG"; alt="照片20">
+            </div>
+            <div class="grid-item">
+                <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/IMG_2883.JPG"; alt="照片20">
+            </div>
+            <div class="grid-item">
+                <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/IMG_3539.JPG"; alt="照片19">
+            </div>
+            <div class="grid-item">
+                <img src="https://raw.githubusercontent.com/C111181105/C111181105.github.io/main/IMG_3540.JPG"; alt="照片20">
+            </div>
+        </div> 
+               
     </section>
 </body>
 
